# ruok

./: Cargo.toml  README.md  example_config.yaml
.github/workflows/: coverage.yml
src/: checker.rs  cli.rs  config.rs  lib.rs  main.rs  notifier.rs  service.rs  startup.rs
src/notifications/: mod.rs  slack.rs
tests/: integration.rs
