[package]
name = "ruok"
version = "0.1.0"
authors = ["Olly Swanson"]
description = "Reserved for an idea"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.7.2"
