[package]
name = "ruok"
version = "0.1.0"
authors = ["Olly Swanson"]
description = "Reserved for an idea"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "3.0.0-beta.2"
once_cell = "1.7.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"] }
url = { versions = "2.2.1", features = ["serde"] }
